a1/brendan_gordon/TEST_PROGRAMS/invalidtype/ethan_macdonald/int_to_string.min
var x: int;
var s: string;

x = 5;
s = x; #Error: int can't be assigned to string
